[package]
name = "icpbin_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.6.0"                          # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.6.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
